--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,11 +8,15 @@ edition = "2021"
 [dependencies]
 anyhow = "1.0.86"
 axum = { version = "0.7.5", features = ["http2", "query", "tracing"] }
-serde = { version = "1.0.204", features = ["derive"] }
+opentelemetry = "0.23.0"
+opentelemetry-otlp = { version = "0.16.0", features = ["tonic"] }
+opentelemetry_sdk = { version = "0.23.0", features = ["rt-tokio"] }
+
 serde_json = "1.0.120"
 thiserror = "1.0.61"
 tracing = "0.1.40"
 tracing-appender = "0.2.3"
+tracing-opentelemetry = "0.24.0"
 tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
 
 [dev-dependencies]
