--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,8 @@ edition = "2021"
 [dependencies]
 anyhow = "1.0.86"
 axum = { version = "0.7.5", features = ["http2", "query", "tracing"] }
+chrono = "0.4.38"
+
 opentelemetry = "0.23.0"
 opentelemetry-otlp = { version = "0.16.0", features = ["tonic"] }
 opentelemetry_sdk = { version = "0.23.0", features = ["rt-tokio"] }
@@ -22,4 +24,5 @@ tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
 [dev-dependencies]
 serde = { version = "1.0.204", features = ["derive"] }
 serde_json = "1.0.120"
+derive_builder = "0.20.0"
 tokio = { version = "1.38.0", features = ["rt", "rt-multi-thread", "macros", "net", "io-util"] }
