--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,3 +26,4 @@ serde = { version = "1.0.204", features = ["derive"] }
 serde_json = "1.0.120"
 derive_builder = "0.20.0"
 tokio = { version = "1.38.0", features = ["rt", "rt-multi-thread", "macros", "net", "io-util"] }
+derive_more = "0.99.18"
