--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,7 @@ chrono = "0.4.38"
 opentelemetry = "0.23.0"
 opentelemetry-otlp = { version = "0.16.0", features = ["tonic"] }
 opentelemetry_sdk = { version = "0.23.0", features = ["rt-tokio"] }
-
+serde = { version = "1.0.204", features = ["derive"] }
 serde_json = "1.0.120"
 thiserror = "1.0.61"
 tracing = "0.1.40"
@@ -27,3 +27,4 @@ serde_json = "1.0.120"
 derive_builder = "0.20.0"
 tokio = { version = "1.38.0", features = ["rt", "rt-multi-thread", "macros", "net", "io-util"] }
 derive_more = "0.99.18"
+strum = { version = "0.26.3", features = ["derive"] }
