--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,8 @@ edition = "2021"
 [dependencies]
 anyhow = "1.0.86"
 axum = { version = "0.7.5", features = ["http2", "query", "tracing"] }
+
+chacha20poly1305 = "0.10.1"
 chrono = { version = "0.4.38", features = ["serde"] }
 
 opentelemetry = "0.23.0"
@@ -15,6 +17,7 @@ opentelemetry-otlp = { version = "0.16.0", features = ["tonic"] }
 opentelemetry_sdk = { version = "0.23.0", features = ["rt-tokio"] }
 serde = { version = "1.0.204", features = ["derive"] }
 serde_json = "1.0.120"
+serde_with = "3.8.3"
 thiserror = "1.0.61"
 tracing = "0.1.40"
 tracing-appender = "0.2.3"
@@ -25,6 +28,14 @@ tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
 serde = { version = "1.0.204", features = ["derive"] }
 serde_json = "1.0.120"
 derive_builder = "0.20.0"
-tokio = { version = "1.38.0", features = ["rt", "rt-multi-thread", "macros", "net", "io-util"] }
+tokio = { version = "1.38.0", features = [
+    "rt",
+    "rt-multi-thread",
+    "macros",
+    "net",
+    "io-util",
+] }
 derive_more = "0.99.18"
 strum = { version = "0.26.3", features = ["derive"] }
+base64 = "0.22.1"
+http = "1.1.0"
