--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 [dependencies]
 anyhow = "1.0.86"
 axum = { version = "0.7.5", features = ["http2", "query", "tracing"] }
+bytes = "1.6.0"
 
 chacha20poly1305 = "0.10.1"
 chrono = { version = "0.4.38", features = ["serde"] }
