--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,14 +29,9 @@ tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
 serde = { version = "1.0.204", features = ["derive"] }
 serde_json = "1.0.120"
 derive_builder = "0.20.0"
-tokio = { version = "1.38.0", features = [
-    "rt",
-    "rt-multi-thread",
-    "macros",
-    "net",
-    "io-util",
-] }
+tokio = { version = "1.38.0", features = ["rt", "rt-multi-thread", "macros", "net", "io-util", "fs"] }
 derive_more = "0.99.18"
 strum = { version = "0.26.3", features = ["derive"] }
 base64 = "0.22.1"
 http = "1.1.0"
+blake3 = "1.5.1"
